
##
## Features
##

- Wordlist encoding: Support added for internal convert from and to user-defined encoding during runtime
- Wordlist encoding: Added parameters --encoding-from and --encoding-to to configure wordlist encoding handling
- Rules: Support added for rule 'eX'
- Rules: Support added for position 'p' in host mode (using -j or -k)

##
## Improvements
##

- WPA cracking: Improved nonce-error-corrections mode to fix corrupt nonce generated on Big-Endian devices

##
## Bugs
##

- Fixed a missing type specifier in a function declaration of the RACF kernel

##
## Technical
##

- Building: On binary release package, link libiconv static for windows binaries
- Dictstat: Structure for dictstat file changed as it has to include --encoding-from and --encoding-to parameter now
- OpenCL Runtime: Updated AMDGPU-Pro driver version check, do warn if version 17.10 is detected which is known to be broken
- WPA cracking: Reduced --nonce-error-corrections default from 16 to 8 to compensate speed drop caused due to Big-Endian fixes

* changes v3.40 -> 3.5.0:

##
## Features
##

- WPA cracking: Added support for WPA/WPA2 handshake AP nonce automatic error correction
- WPA cracking: Added parameter --nonce-error-corrections to configure range of error correction

##
## Algorithms
##

- Added hash-mode 15100 = Juniper/NetBSD sha1crypt

##
## Improvements
##

- Abbreviate long hashes to display the Hash.Target status line within 80 characters
- Refactored internal use of esalt to sync with the number of digests instead of the number of salts
- Refactored other output to display within 80 characters without wrapping

##
## Bugs
##

- Fixed a hash validation error when trying to load Android FDE < 4.3 hashes
- Fixed a problem where --keyspace combined with custom charsets incorrectly displayed an error message
- Fixed a problem where --stdout combined with custom charsets incorrectly displayed an error message